@@ -1,3 +1,13 @@
+* Sat Nov 01 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.12
+- add missing qt5-qtsensors dependency on Fedora
+* Sat Nov 01 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.11
+- fix Qt 5 GUI icon & naim in desktop file on Fedora
+* Sat Nov 01 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.10
+- add the qt5-qtquickcontrols dependency on Fedora
+* Sat Nov 01 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.9
+- fix the modrana-gtk startup script on Fedora
+* Fri Oct 31 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.8
+- exclude Monav binaries from the Fedora package
 * Thu Oct 23 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.7
 - fix the compass rose not showing up in the Qt 5 GUI on Sailfish OS
 * Tue Oct 21 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.6
